--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-05-movies",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/KryzhMax/goit-05-movies",
+  "homepage": "https://KryzhMax.github.io/goit-05-movies",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
